fixed alignment

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -22,7 +22,14 @@
     color: #222;
 }
 
-
+p.nomargin {
+    margin: 0 0 0 0px;
+    margin-left: 15px;
+}
+h3.nomargin {
+    margin: 0 0 0 0px;
+    margin-left: 15px;
+}
 p {
     margin: 0 0 25px;
     font-size: 18px;
@@ -107,6 +114,7 @@ body {
 }
 
 html {
+    min-width: 1100px;
     width: 100%;
     height: 100%;
 }
@@ -137,6 +145,10 @@ h1,h2,h3,h4,h5,h6 {
     font-weight: 400;
 }
 
+.projectdescription
+{
+    overflow: hidden;
+}
 
 /*
  Portfolio CSS
@@ -144,6 +156,7 @@ h1,h2,h3,h4,h5,h6 {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+    float: left;
 }
 
 #portfolio .portfolio-item .portfolio-link {
